test/fails/bad_types/mat_norm.lgl
void main() {
    mat2x2 m = [[2., 3.], [3., 2.]];
    print (norm m);
}